Removed player mesh, onFire(), and touch Interface. Worked with Jacky.

--- a/SeeNoEvil/Saved/Config/Windows/EditorLayout.ini
+++ b/SeeNoEvil/Saved/Config/Windows/EditorLayout.ini
@@ -33,8 +33,8 @@ UnrealEd_Layout_v1.4=(\
 			"Type": "Area",\
 			"Orientation": "Orient_Horizontal",\
 			"WindowPlacement": "Placement_Automatic",\
-			"WindowSize_X": 1248,\
-			"WindowSize_Y": 676,\
+			"WindowSize_X": 1092,\
+			"WindowSize_Y": 663,\
 			"Nodes": [\
 				(\
 					"SizeCoefficient": 1,\
@@ -53,10 +53,46 @@ UnrealEd_Layout_v1.4=(\
 		(\
 			"SizeCoefficient": 1,\
 			"Type": "Area",\
+			"Orientation": "Orient_Horizontal",\
+			"WindowPlacement": "Placement_Specified",\
+			"WindowPosition_X": 293,\
+			"WindowPosition_Y": 86,\
+			"WindowSize_X": 1092,\
+			"WindowSize_Y": 663,\
+			"bIsMaximized": false,\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "None",\
+					"Tabs": [\
+						(\
+							"TabId": "EditorSettings",\
+							"TabState": "ClosedTab"\
+						),\
+						(\
+							"TabId": "ProjectSettings",\
+							"TabState": "ClosedTab"\
+						),\
+						(\
+							"TabId": "PluginsEditor",\
+							"TabState": "ClosedTab"\
+						)\
+					]\
+				)\
+			]\
+		),\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
 			"Orientation": "Orient_Vertical",\
-			"WindowPlacement": "Placement_Automatic",\
-			"WindowSize_X": 1248,\
-			"WindowSize_Y": 676,\
+			"WindowPlacement": "Placement_Specified",\
+			"WindowPosition_X": 289,\
+			"WindowPosition_Y": 173,\
+			"WindowSize_X": 1092,\
+			"WindowSize_Y": 663,\
+			"bIsMaximized": false,\
 			"Nodes": [\
 				(\
 					"SizeCoefficient": 1,\
@@ -83,36 +119,6 @@ UnrealEd_Layout_v1.4=(\
 					]\
 				)\
 			]\
-		),\
-		(\
-			"SizeCoefficient": 1,\
-			"Type": "Area",\
-			"Orientation": "Orient_Horizontal",\
-			"WindowPlacement": "Placement_Automatic",\
-			"WindowSize_X": 1248,\
-			"WindowSize_Y": 676,\
-			"Nodes": [\
-				(\
-					"SizeCoefficient": 1,\
-					"Type": "Stack",\
-					"HideTabWell": false,\
-					"ForegroundTab": "None",\
-					"Tabs": [\
-						(\
-							"TabId": "EditorSettings",\
-							"TabState": "ClosedTab"\
-						),\
-						(\
-							"TabId": "ProjectSettings",\
-							"TabState": "ClosedTab"\
-						),\
-						(\
-							"TabId": "PluginsEditor",\
-							"TabState": "ClosedTab"\
-						)\
-					]\
-				)\
-			]\
 		)\
 	]\
 )
@@ -128,7 +134,7 @@ LevelEditor_Layout_v1.1=(\
 			"WindowPlacement": "Placement_NoWindow",\
 			"Nodes": [\
 				(\
-					"SizeCoefficient": 0.20000000298023224,\
+					"SizeCoefficient": 0.20961540937423706,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Vertical",\
 					"Nodes": [\
@@ -159,7 +165,7 @@ LevelEditor_Layout_v1.1=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.60000002384185791,\
+					"SizeCoefficient": 0.59038472175598145,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Vertical",\
 					"Nodes": [\
@@ -244,5 +250,6 @@ LevelEditor_Layout_v1.1=(\
 		)\
 	]\
 )
+Standalone_BlueprintDefaults_Layout_v4=( 	"Type": "Layout", 	"Name": "Standalone_BlueprintDefaults_Layout_v4", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.20000000298023224, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 1, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "DefaultEditor", 					"Tabs": [ 						( 							"TabId": "DefaultEditor", 							"TabState": "OpenedTab" 						) 					] 				) 			] 		) 	] )
 
 
