--- a/SeeNoEvil/Saved/Config/Windows/EditorUserSettings.ini
+++ b/SeeNoEvil/Saved/Config/Windows/EditorUserSettings.ini
@@ -41,7 +41,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,ShadowsFromEditorHiddenActors=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,LpvLightingOnly=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,DistanceFieldAO=1,VisualizeSSR=0,ForceGBuffer=0,VisualizeSenses=1",BufferVisualizationMode=,ExposureSettings=(LogOffset=999,bFixed=False),FOVAngle=90.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=))
 
 [ModuleFileTracking]
-SeeNoEvil.TimeStamp=2015.01.19-03.42.41
+SeeNoEvil.TimeStamp=2015.01.19-05.01.14
 SeeNoEvil.LastCompileMethod=External
 PakFile.TimeStamp=2015.01.12-22.51.53
 PakFile.LastCompileMethod=Unknown
@@ -392,9 +392,9 @@ ExternalImagePicker.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=284.000 Y=84.000
-WindowSize=X=1370.000 Y=810.000
-InitiallyMaximized=True
+ScreenPosition=X=198.000 Y=112.000
+WindowSize=X=1410.000 Y=850.000
+InitiallyMaximized=False
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -524,11 +524,14 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Actor=True
 StaticMeshActor.Blueprint=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Tags=True
+LightmassImportanceVolume.Actor=True
 
 [DetailPropertyExpansion]
 InputSettings=Object.Bindings.ActionMappings.ActionMappings[4]
 Object=
-Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Brush=
 MyCharacter_C=Object.Mesh.Mesh1P.Object.Collision.BodyInstance" "Object.Camera.FirstPersonCameraComponent.Object.CameraSettings.PostProcessSettings.LensFlareTints" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.CharacterMovement.Object.Character Movement.RotationRate" "Object.Character.CharacterMovement.Object.MovementComponent.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance
 SeeNoEvilCharacter=Object.Mesh.Mesh1P.Object.Collision.BodyInstance" "Object.Camera.FirstPersonCameraComponent.Object.CameraSettings.PostProcessSettings.LensFlareTints" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.CharacterMovement.Object.Character Movement.RotationRate" "Object.Character.CharacterMovement.Object.MovementComponent.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance
 Character=Object.Mesh.Mesh1P.Object.Collision.BodyInstance" "Object.Camera.FirstPersonCameraComponent.Object.CameraSettings.PostProcessSettings.LensFlareTints" "Object.Character.Mesh.Object.Collision.BodyInstance" "Object.Character.CharacterMovement.Object.Character Movement.RotationRate" "Object.Character.CharacterMovement.Object.MovementComponent.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance
