--- a/SeeNoEvil/Saved/Config/Windows/Engine.ini
+++ b/SeeNoEvil/Saved/Config/Windows/Engine.ini
@@ -1,9 +1,3 @@
-[Core.System]
-Paths=../../../Engine/Content
-Paths=C:/Users/Jacky Chiu/Documents/git/See No Evil/SeeNoEvil/Content
-Paths=../../../Engine/Plugins/2D/Paper2D/Content
-Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
-
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
 UnicastEndpoint=0.0.0.0:0
@@ -12,5 +6,11 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[Core.System]
+Paths=../../../Engine/Content
+Paths=../../../../../../Users/Matthew/Documents/seenoevil/SeeNoEvil/Content
+Paths=../../../Engine/Plugins/2D/Paper2D/Content
+Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
 
