Added INPUT CAPTURE to SNECharacter/cpp/h

--- a/SeeNoEvil/Saved/Config/Windows/Engine.ini
+++ b/SeeNoEvil/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=C:/Users/Jacky Chiu/Documents/git/See No Evil/SeeNoEvil/Content
+Paths=../../../../../../Users/Brian/Desktop/CMPS 171/seenoevil/SeeNoEvil/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
