--- a/SeeNoEvil/Saved/Config/CleanSourceConfigs/Game.ini
+++ b/SeeNoEvil/Saved/Config/CleanSourceConfigs/Game.ini
@@ -1,5 +1,5 @@
 [Internationalization]
-LocalizationPaths=C:/Users/Jacky Chiu/Documents/git/See No Evil/SeeNoEvil/Content/Localization/Game
+LocalizationPaths=../../../../../../Users/Brian/Desktop/CMPS 171/seenoevil/SeeNoEvil/Content/Localization/Game
 
 [/Script/Engine.GameMode]
 InactivePlayerStateLifeSpan=300
